# ragbrain-mcp

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  build_exe.py  pyproject.toml
src/ragbrain_mcp/: __init__.py  client.py  config.py  formatters.py  server.py  tools.py
tests/: __init__.py  conftest.py  test_client.py  test_config.py  test_formatters.py  test_tools.py
