[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ragbrain-mcp"
version = "0.1.0"
description = "MCP server for RAGBrain - Connect Claude Desktop to your RAGBrain knowledge base"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "RAGBrain Contributors" }
]
keywords = [
    "mcp",
    "model-context-protocol",
    "claude",
    "ragbrain",
    "rag",
    "knowledge-base",
    "ai",
    "llm"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mcp>=1.0.0,<2.0.0",
    "httpx>=0.25.0,<1.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "pydantic-settings>=2.0.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "respx>=0.21.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]
build = [
    "pyinstaller>=6.0.0",
]

[project.scripts]
ragbrain-mcp = "ragbrain_mcp.server:main"

[project.urls]
Homepage = "https://github.com/ragbrain/ragbrain-mcp"
Documentation = "https://github.com/ragbrain/ragbrain-mcp#readme"
Repository = "https://github.com/ragbrain/ragbrain-mcp"
Issues = "https://github.com/ragbrain/ragbrain-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/ragbrain_mcp"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["ragbrain_mcp"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=ragbrain_mcp --cov-report=term-missing"

[tool.coverage.run]
source = ["src/ragbrain_mcp"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
